--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -15,11 +15,11 @@
             <i class="fa fa-plus-square"></i>
             <span>{{ button_add }}</span>
           </button>
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="refEditModal()">
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="refEditModal(false)">
             <i class="fa fa-edit"></i>
             <span>{{ button_edit }}</span>
           </button>
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="refCopy()">
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="refEditModal(true)">
             <i class="fa fa-clone" aria-hidden="true"></i>
             <span>{{ button_copy }}</span>
           </button>
