--- a/views/template/common/login.twig
+++ b/views/template/common/login.twig
@@ -1,15 +1,8 @@
 <div class="login flex-grow-1">
-    <div class="container-fluid">
-        {% if success %}
-            <div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> {{ success }}
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
-            </div>
-        {% endif %}
-        {% if error_warning %}
-            <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
-            </div>
-        {% endif %}
+    <div class="container-fluid">        
+        {# <div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> {{ success }}
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+        </div> #}   
         <form class="form-signin w-100 p-3 m-auto d-flex flex-column gap-3" action="{{ action }}" method="post" enctype="application/json">
             <h2 class="h3 mb-3 font-weight-normal" style="color:#282c34; text-shadow:0px 4px 3px rgba(0,0,0,0.4),0px 8px 13px rgba(0,0,0,0.1),0px 18px 23px rgba(0,0,0,0.1);">
                 <img class="fa-spin" src="{{ logo }}" alt="logo" width="45" height="45">{{ text_login }}
@@ -22,9 +15,12 @@
             <div class="form-group">
                 <label for="input-username">{{ entry_username }}</label>
                 <div class="input-group input-group-lg gap-2">
-                    <span class="input-group-text" for="input-username"><i class="fa fa-user"></i></span>                    
-                    <select name="username" value="{{ username }}" class="form-select form-control" id="input-username">
-                        <option selected>  </option>
+                    <span class="input-group-text" for="input-username"><i class="fa fa-user"></i></span>    
+                    {# <input type="text search list"  name="username" list="input-username" class="list form-control"/>                 #}
+                    <select name="username" type="text search" class="text search form-select form-control" id="input-username">
+                    {# <datalist id="input-username"> #}
+                        <option selected  type="text search">  </option>
+                    {# </datalist>    #}
                     </select>
                 </div>
             </div>
@@ -34,16 +30,12 @@
                     <span class="input-group-text" id="btnGroupAddon2"><i class="fa fa-lock"></i></span>
                     <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" aria-describedby="btnGroupAddon2">
                 </div>
-                {% if forgotten %}
-                    <span class="help-block"><a href="{{ forgotten }}">{{ text_forgotten }}</a></span>
-                {% endif %}
             </div>
+            {# <div class="alert alert-danger alert-dismissible" hidden><i class="fa fa-exclamation-circle"></i> {{ error_warning }}                
+            </div>   #}
             <div class="text-right">
                 <button type="submit" class="btn btn-primary"><i class="fa fa-rocket"></i> {{ button_login }}</button>
-            </div>
-            {% if redirect %}
-                <input type="hidden" name="redirect" value="{{ redirect }}" />
-            {% endif %}
+            </div>            
         </form>
     </div>
 </div>
