--- a/views/index.twig
+++ b/views/index.twig
@@ -31,7 +31,7 @@
                         <noscript>You need to enable JavaScript to run this app.</noscript>                    
                         <div class="eva" id="eva-app" data-app="">{#Start app#}
                             {% include "./template/common/references.twig" %}  
-                            {# <object>{{ block('ref') }}</object> #}
+                            {% include "./template/common/constants.twig" %}                              
                         </div>                            
                     {% endif %}       
                 </div>                         
