--- a/views/template/common/login.twig
+++ b/views/template/common/login.twig
@@ -16,8 +16,8 @@
                 <label for="input-username">{{ entry_username }}</label>
                 <div class="input-group input-group-lg gap-2">
                     <span class="input-group-text" for="input-username"><i class="fa fa-user"></i></span>    
-                    {# <input type="text search list"  name="username" list="input-username" class="list form-control"/>                 #}
-                    <select name="username" type="text search" class="text search form-select form-control" id="input-username">
+                    {# <input type="text search list"  name="username" list="input-username" class="select text search list form-control"/>                 #}
+                    <select name="username" type="text search list" class="text search list form-select form-control" id="input-username">                    
                     {# <datalist id="input-username"> #}
                         <option selected  type="text search">  </option>
                     {# </datalist>    #}
