--- a/views/template/common/constants.twig
+++ b/views/template/common/constants.twig
@@ -1,35 +1,25 @@
 {% block const %}    
-    {# Reference #}
-    <div class="tab-pane fade" id="nav-const-form" role="tabpanel" aria-labelledby="naf-const-tab">    
-      <ul class="nav nav-tabs" id="eva-nav-tabs">
-      </ul>
+    {# Constants #}
+    <div class="tab-pane" id="nav-const-form" role="tabpanel" aria-labelledby="naf-const-tab">    
+      {# <ul class="nav nav-tabs" id="eva-nav-tabs">
+      </ul> #}
       <h5 class="title" id="constFormLabel">Constants</h5>             
+      <hr>
       <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
-        <div class="btn-group btn-group-sm" role="group">
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="constModal()">
-            <i class="fa fa-plus-square"></i>
-            <span>{{ button_add }}</span>
-          </button>
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="constEditModal(false)">
+        <div class="btn-group btn-group-sm" role="group">          
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="constEditModal()">
             <i class="fa fa-edit"></i>
             <span>{{ button_edit }}</span>
-          </button>
-          {# <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="refEditModal(true)">
-            <i class="fa fa-clone" aria-hidden="true"></i>
-            <span>{{ button_copy }}</span>
-          </button> #}
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="constDelete()">
-            <i class="fa fa-minus-square"></i>
-            <span>{{ button_delete }}</span>
-          </button>
-          <div class="btn-group btn-group-sm" role="group">
-            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
-            <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">           
-              <li><a class="dropdown-item">{{ button_etc}}</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item">...</a></li>
-            </ul>
-          </div>
+          </button>              
+        </div>
+        <div class="btn-group btn-group-sm" role="group">
+          <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
+          <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+            <li><a class="dropdown-item d-flex gap-2 align-items-center"><i class="fa fa-refresh"></i>{{ button_update }}</a></li>
+            <li><a class="dropdown-item">{{ button_etc}}</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item">...</a></li>
+          </ul>
         </div>
       </div>           
       <div class="eva-table" id="eva-const-form"></div>       
@@ -50,7 +40,7 @@
         </form>
       </div>
       <div class="modal-footer">        
-        <button type="submit" class="btn btn-primary" onclick="constCreate()">{{ button_save }}&{{button_close}}</button>        
+        <button type="submit" class="btn btn-primary" onclick="constSave()">{{ button_save }}&{{button_close}}</button>        
       </div>
     </div>
   </div>
