--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -433,7 +433,7 @@
       </div>
       <div class="modal-body">
         <form class="form" id="create-module-form"> 
-          <textarea  class="text/javascript form-control" id="input-module" type="text/javascript" rows="18" style="height: calc(100vh - 230px);"></textarea>
+          <textarea  class="text/javascript form-control" id="input-module-form" type="text/javascript" rows="18" style="height: calc(100vh - 230px);"></textarea>
         </form>
       </div>
       <div class="modal-footer">
