--- a/views/template/common/constants.twig
+++ b/views/template/common/constants.twig
@@ -10,17 +10,16 @@
           <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="constEditModal()">
             <i class="fa fa-edit"></i>
             <span>{{ button_edit }}</span>
-          </button>              
+          </button>   
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="showConstTable()">
+            <a class="dropdown-item d-flex gap-2 align-items-center"><i class="fa fa-refresh"></i></a>
+          </button>           
         </div>
-        <div class="btn-group btn-group-sm" role="group">
+        {# <div class="btn-group btn-group-sm" role="group">
           <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
-          <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-            <li><a class="dropdown-item d-flex gap-2 align-items-center"><i class="fa fa-refresh"></i>{{ button_update }}</a></li>
-            <li><a class="dropdown-item">{{ button_etc}}</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item">...</a></li>
+          <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">                                        
           </ul>
-        </div>
+        </div> #}
       </div>           
       <div class="eva-table" id="eva-const-form"></div>       
     </div>  
@@ -31,12 +30,19 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="constModalLabel"></h5>
+        <h5 class="modal-title" id="constModalLabel">Edit constant:</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <form class="form" id="create-const-form"> 
-          {# Dynamic form #}
+          <label for="input-const-name">Name:</label>
+          <div class="input-group input-group-sm">
+            <input type="text" placeholder="" id="input-const-name" class="form-control" disabled/>
+          </div>  
+          <label for="input-const-value">Value:</label>
+          <div class="input-group input-group-sm">
+            <input type="text" placeholder="" id="input-const-value" class="form-control"/>
+          </div> 
         </form>
       </div>
       <div class="modal-footer">        
