--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -1,5 +1,5 @@
 <div class="tab-content" id="nav-tabContent">
-  {# Config [0] #}
+  {# Config #}
   <div class="tab-pane fade active show" id="nav-config" role="tabpanel" aria-labelledby="nav-config-tab">
     <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
       <div class="btn-group btn-group-sm" role="group">
@@ -35,7 +35,7 @@
     </div>           
     <div class="eva-table"></div>      
   </div> 
-  {# Users [1] #}
+  {# Users #}
   <div class="tab-pane fade" id="nav-users" role="tabpanel" aria-labelledby="nav-users-tab">
     <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
       <div class="btn-group btn-group-sm" role="group">
@@ -68,7 +68,7 @@
     </div>           
     <div class="eva-table"></div>      
   </div>    
-  {# Roles [2] #}
+  {# Roles #}
   <div class="tab-pane fade" id="nav-roles" role="tabpanel" aria-labelledby="nav-roles-tab">
     <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
       <div class="btn-group btn-group-sm" role="group">
@@ -319,7 +319,7 @@
     </div>
   </div>
 </div>
-{# Modal Edit Subsystem [6] #}
+{# Modal Edit Subsystem #}
 <div class="modal modal-lg fade" id="editSubsystemModal" tabindex="-2" data-bs-backdrop="static" aria-labelledby="editSubsystemModalLabel" aria-hidden="true">
   <div class="modal-dialog  modal-dialog-scrollable">
     <div class="modal-content">
