--- a/views/template/common/constants.twig
+++ b/views/template/common/constants.twig
@@ -41,7 +41,8 @@
           </div>  
           <label for="input-const-value">Value:</label>
           <div class="input-group input-group-sm">
-            <input type="text" placeholder="" id="input-const-value" class="form-control"/>
+            <input id="input-const-value"/>
+            <button class="btn btn-outline-secondary" id="input-const-value-btn" type="button" onclick="constBtn()" hidden>...</button>
           </div> 
         </form>
       </div>
