--- a/views/template/common/column_left.twig
+++ b/views/template/common/column_left.twig
@@ -1,4 +1,8 @@
-<div id="column-left" style="height:calc(100vh - 99.5px);">  
+<div id="column-left" style="height:calc(100vh - 99.5px);">
+  {# <button class="btn btn-primary btn-sm" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLeftColumn" aria-controls="navbarLeftColumn" aria-expanded="true" aria-label="Left column">
+    <span class="navbar-toggler-icon"></span>
+  </button> #}
+  {# <div class="collapse" id="navbarLeftColumn"> #}
     <h6 class="justify-content-between" >
       <span class="p-3 menu-title">{{ text_configmenu }}</span>
     </h6>
@@ -11,4 +15,5 @@
         </li>
       {% endfor %}
     </ul>  
+  {# </div> #}
 </div>
