--- a/views/index.twig
+++ b/views/index.twig
@@ -29,10 +29,10 @@
                         </div>                                                            
                     {% else %} {#Frontend#}                       
                         <noscript>You need to enable JavaScript to run this app.</noscript>                    
-                        <div class="eva" id="eva-app" data-app="">{#Start app#}
-                            {% include "./template/common/constants.twig" %}  
+                        <div class="eva" id="eva-app" data-app="">{#Start app#}                           
+                            {% include "./template/common/constants.twig" %} 
                             {% include "./template/common/references.twig" %}  
-                            {% include "./template/common/documents.twig" %}                              
+                            {# {% include "./template/common/documents.twig" %}                               #}                          
                         </div>                            
                     {% endif %}       
                 </div>                         
