--- a/views/template/common/column_left.twig
+++ b/views/template/common/column_left.twig
@@ -9,7 +9,7 @@
     <ul class="p-2 sidebar-list nav btn-group-vertical">
       {% for element in asideList %}
         <li class="nav-item">
-          <a class="nav-link btn" href="{{element.href}}" name={{element.title}} onclick="tblFilter(name)"> 
+          <a class="nav-link btn" href="#" name={{element.title}} onclick="tblFilter(name)"> 
             {{ element.title }}
           </a>
         </li>
