--- a/views/template/common/constants.twig
+++ b/views/template/common/constants.twig
@@ -58,7 +58,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">Select element:</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close"  aria-label="Close" onclick="modalShow()"></button>
       </div>
       <div class="modal-body">          
         <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">          
@@ -68,11 +68,11 @@
               <span>Select</span>
             </button>    
           </div>
-        </div>
+        </div> 
         <div class="eva-table"></div>          
       </div>
       <div class="modal-footer">        
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{button_close}}</button>
+        <button type="button" class="btn btn-secondary" onclick="modalShow()">{{button_close}}</button>
       </div>
     </div>
   </div>
