--- a/views/index.twig
+++ b/views/index.twig
@@ -32,7 +32,7 @@
                         <div class="eva" id="eva-app" data-app="">{#Start app#}                           
                             {% include "./template/common/constants.twig" %} 
                             {% include "./template/common/references.twig" %}  
-                            {# {% include "./template/common/documents.twig" %}                               #}                          
+                            {% include "./template/common/documents.twig" %}                                                        
                         </div>                            
                     {% endif %}       
                 </div>                         
