--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -373,7 +373,7 @@
               <div class="accordion-body"> #}
                 <label for="input-req-id">Identifier:</label>
                 <div class="input-group input-group-sm">
-                  <input type="text" placeholder="[a-zA-Z0-9]" id="input-req-id" class="form-control" required pattern="[a-zA-Z0-9]+"/>
+                  <input type="text" placeholder="[a-zA-Z0-9]" id="input-req-id" class="form-control" required pattern="[a-zA-Z0-9.]+"/>
                 </div>             
                 <label for="input-req-synonym">Synonym:</label>
                 <div class="input-group input-group-sm">
