--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -23,14 +23,14 @@
             <i class="fa fa-floppy-o"></i>
             <span>{{ button_save }}</span>
         </button>       
-        <div class="btn-group btn-group-sm" role="group">
+        {# <div class="btn-group btn-group-sm" role="group">
           <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
           <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">           
             <li><a class="dropdown-item">{{ button_etc}}</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item">...</a></li>
           </ul>
-        </div>
+        </div> #}
       </div>
     </div>           
     <div class="eva-table"></div>      
