--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -25,9 +25,9 @@
       <div class="btn-group btn-group-sm" role="group">
         <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
         <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">           
-            <li><a class="dropdown-item">{{ button_etc}}</a></li>
+            <li><a class="dropdown-item eva-refresh"><i class="fa fa-refresh"></i> {{button_update}}</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item">...</a></li>
+            <li><a class="dropdown-item"><i class="fa fa-cog"></i><span> Сhange form...</span></a></li>
         </ul>
       </div>
     </div>
