--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -377,11 +377,11 @@
           <label>Requisites:</label>
           <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
             <div class="btn-group btn-group-sm" role="group">
-              <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="reqModal()">
+              <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="reqTabPartModal()">
                 <i class="fa fa-plus-square"></i>
                 <span>{{ button_add }}</span>
               </button>
-              <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="reqEditModal()">
+              <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="reqTabPartEditModal()">
                 <i class="fa fa-edit"></i>
                 <span>{{ button_edit }}</span>
               </button>
