--- a/views/template/common/documents.twig
+++ b/views/template/common/documents.twig
@@ -10,6 +10,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
+        <ul class="nav nav-tabs" id="eva-nav-tabs-doc"></ul>
         <form class="form" id="create-doc-form"> 
           {# Dynamic form #}
         </form>
