--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -44,6 +44,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
+        <ul class="nav nav-tabs" id="eva-nav-tabs-ref"></ul>
         <form class="form" id="create-ref-form"> 
           {# Dynamic form #}
         </form>
