--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -285,6 +285,12 @@
                   <i class="fa fa-minus-square"></i>
                   <span>{{ button_delete }}</span>
                 </button>
+                  <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="reqUp()">
+                  <i class="fa fa-arrow-up"></i>                  
+                </button>
+                  <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="reqDown()">
+                  <i class="fa fa-arrow-down"></i>                  
+                </button>
               </div>
             </div> 
             <div class="eva-table"></div> 
